--- a/css/index.css
+++ b/css/index.css
@@ -20,6 +20,13 @@ html, body{width: 100%; height: 100%;}
     position: relative;
 }
 
+.header .slide-swiper .swiper-wrapper .swper-slide{
+    width: 100%;
+}
+.header .slide-swiper .swiper-wrapper .swper-slide img{
+    width: 100%;
+}
+
 
 .header .banner-box{
     position: absolute;
