--- a/css/index3.css
+++ b/css/index3.css
@@ -13,6 +13,7 @@ html, body{width: 100%; height: 100%;}
 
 .header{
     width: 100%;
+    padding-top: 70px;
 }
 .header .swiper{
     width: 100%;
@@ -29,12 +30,16 @@ html, body{width: 100%; height: 100%;}
     top: 32%;
     /* left: 10%; */
     width: 16.5%;
-    height: 40%;
+    /* height: 40%; */
     /* width: 320px; */
     /* height: 328px; */
     background-color: rgba(255, 255, 255, 0.56);
     display: none;
     z-index: 1;
+    padding-bottom: 3%;
+    /* white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; */
 }
 .header .box1{
     left: 10%;
@@ -45,16 +50,21 @@ html, body{width: 100%; height: 100%;}
 .header .banner-box a:nth-child(1){
     display: inline-block;
     font-weight: bold;
-    font-size: 23px;
-    margin-top: 32px;
-    margin-left: 45px;
+    /* font-size: 23px; */
+    font-size: 1.7vw;
+    /* margin-top: 32px; */
+    margin-top: 10%;
+    /* margin-left: 45px; */
+    margin-left: 15%;
 }
 .header .banner-box a:nth-child(2){
     display: inline-block;
-    margin-top: 64px;
-    margin-left: 45px;
+    /* margin-top: 64px; */
+    margin-top: 10%;
+    margin-left: 15%;
     color: #626262;
-    font-size: 13px;
+    /* font-size: 13px; */
+    font-size: 0.7vw;
     line-height: 23px;
     font-weight: bold;
     letter-spacing: 0.5px;
@@ -187,39 +197,58 @@ html, body{width: 100%; height: 100%;}
 }
 .content .pic{
     width: 100%;
-    /* padding-bottom: 30px; */
     padding-top: 70px;
-}
-.content .pic:nth-child(1){
     display: none;
 }
-.content .pic:not(:nth-child(1)){
-    /* display: none; */
+.content .pic.on {
+    display: block;
+}
+.content .menu-pic .pic_2 {
+    display: none;
 }
 .content .pic .swiper-wrapper{
     max-width: 1650px;
-    margin: 0 auto;
-    overflow: hidden;
 }
 .content .pic .swiper-wrapper .pic-item{
-    width: 20%;
+    width: 15%;
     position: relative;
+    display: flex;
+    justify-content: center;
+    /* overflow: hidden;
+    box-sizing: border-box; */
 }
+.content .pic .swiper-wrapper .pic-item img{
+    width: 70%;
+}
+/* .content .pic .swiper-wrapper .pic-item:hover{
+    transform: scale(1.1);
+} */
 .content .pic .swiper-wrapper .pic-item:hover ul{
     display: block;
 }
+.content .pic .swiper-wrapper .pic-item ul li:nth-child(4){
+    font-weight: bold;
+    font-size: 17px;
+    margin-top: 15px;
+}
 .content .pic .swiper-wrapper .pic-item ul{
     position: absolute;
+    width: 50%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.56);
     /* top: 50%; */
     left: 50%;
-    bottom: -10%;
+    bottom: 0%;
     transform: translateX(-50%);
-    /* display: block; */
     display: none;
+    text-align: center;
+    box-sizing: border-box;
+    padding-top: 35%;
 }
-/* .content .pic .swiper-wrapper .pic-item, */
-.content .pic .swiper-wrapper .pic-item img{
+.content .pic:nth-child(6) .swiper-wrapper .pic-item ul{
     width: 100%;
+    height: 60%;
+    padding-top: 5%;
 }
 /* 메뉴부분 수정해야함 */
 /* 메뉴부분 수정해야함 */
@@ -519,14 +548,18 @@ html, body{width: 100%; height: 100%;}
     justify-content: space-between;
     flex-basis: 47%;
 }
+.content .banner .bottom .txt .txt-area ul li{
+    cursor: pointer;
+}
 .content .banner .bottom .txt .txt1{
     margin-bottom: 33px;
 }
-.content .banner .bottom .txt ul li{
+.content .banner .bottom .txt2 ul:nth-child(1) li{
     position: relative;
-    /* white-space: nowrap;
+    width: 55%;
+    white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis; */
+    text-overflow: ellipsis;
 }
 /* .content .banner .bottom .txt ul:nth-child(1) li::after{
     position: absolute;
@@ -589,11 +622,25 @@ html, body{width: 100%; height: 100%;}
     margin: 0 1%;
 }
 
+/* @media screen and (max-width: 1615px) {
+    .header .banner-box{
+        width: 30%;
+    }
+} */
+
 
 @media screen and (min-width: 641px) and (max-width: 1200px) {
     /* .content .menu ul li{
         flex-basis: 25%;
     } */
+    /* .header .banner-box{
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    } */
+    .header .banner-box a:nth-child(2){
+    display: none;
+    }
     .content .special .title ul{
         padding: 0 2%;
     }
@@ -677,5 +724,173 @@ html, body{width: 100%; height: 100%;}
     }
     .footer .footer-wrap ul:nth-child(1) li:nth-child(odd)::after{
         display: none;
+    }
+    .footer .icon img{
+        width: 30px;
+        height: 30px;
+    }
+}
+
+@media screen and (max-width: 640px){
+    .header .header-list .etc ul{
+        justify-content: center;
+    }
+    .header .header-list .etc ul li:not(:nth-child(1)){
+        display: none;
+    }
+    .header .banner-box a:nth-child(2){
+        display: none;
+    }
+
+    .content .menu ul{
+        flex-wrap: wrap;
+    }
+    .content .menu ul li{
+        flex-basis: 30%;
+        text-align: center;
+    }
+    .content .menu ul li.on::after{
+        width: 30%;
+        bottom: 5%;
+    }
+
+    .content .pic .swiper-wrapper .pic-item ul{
+        padding-top: 10%;
+    }
+    .content .pic .swiper-wrapper .pic-item ul li:nth-child(4){
+        margin-top: 0;
+    }
+    .content .pic .swiper-wrapper .pic-item ul li:not(:nth-child(4)){
+        display: none;
+    }
+
+    .content .special .special-wrap .title{
+        text-align: center;
+    }
+    .content .special .special-wrap .title span{
+        padding-left: 0;
+    }
+    .content .special .special-wrap .title ul{
+        padding-bottom: 0px;
+        flex-wrap: wrap;
+        margin: 50px 0;
+    }
+    .content .special .title ul li{
+        flex-basis: 30%;
+    }
+    .content .special .title ul li::after{
+        content: "";
+        position: absolute;
+        width: 0%;
+        height: 1px;
+        background-color: #e7b633;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        transition: 0.3s;
+    }
+    .content .special .title ul li.on::after{
+        width: 20%;
+        transition: 0.3s;
+    }
+
+    .content .special .box .lab1004,
+    .content .special .box .l7,
+    .content .special .box .island,
+    .content .special .box .di,
+    .content .special .box .lw{
+        flex-wrap: wrap;
+        justify-content: center;
+        /* flex-flow: row-reverse wrap; */
+    }
+    .content .special .lab1004 ul:nth-child(3),
+    .content .special .l7 ul:nth-child(3),
+    .content .special .island ul:nth-child(3),
+    .content .special .di ul:nth-child(3),
+    .content .special .lw ul:nth-child(3){
+        /* flex-basis: 70%; */
+        /* display: flex; */
+        order: -1;
+    }
+    .content .special .lab1004 ul:nth-child(2),
+    .content .special .l7 ul:nth-child(2),
+    .content .special .island ul:nth-child(2),
+    .content .special .di ul:nth-child(2),
+    .content .special .lw ul:nth-child(2){
+        order: -1;
+    }
+    .content .special .lab1004 ul:nth-child(3) li,
+    .content .special .l7 ul:nth-child(3) li,
+    .content .special .island ul:nth-child(3) li,
+    .content .special .di ul:nth-child(3) li,
+    .content .special .lw ul:nth-child(3) li{
+        flex-basis: 30%;
+    }
+    .content .special .txt_box{
+        flex-basis: 80%;
+        padding: 3% 0;
+        transition: 0.3s;
+    }
+    .content .special .txt_box ul{
+        display: flex;
+        justify-content: space-around;
+        /* padding-top: 91px; */
+        margin-right: 13px;
+        align-items: center;
+    }
+    .content .special .txt_box ul li:nth-child(2),
+    .content .special .txt_box ul li:nth-child(3),
+    .content .special .txt_box ul li:nth-child(4){
+        margin-top: 0;
+    }
+    .content .special .txt_box ul li::after{
+        display: none;
+    }
+
+    .content .banner{
+        flex-wrap: wrap;
+    }
+    .content .banner .left,
+    .content .banner .right{
+        flex-basis: 100%;
+    }
+    .content .banner .right .top .searchbox{
+        margin: 0 auto;
+    }
+    .content .banner .bottom .txt1 ul{
+        width: 50%;
+        justify-content: space-between;
+    }
+    .content .banner .bottom .txt ul li{
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    .content .banner .bottom .txt .txt2 ul{
+        width: 50%;
+    }
+    /* .content .banner .right .title span{
+        font-size: 18px;
+    } */
+    .content .banner .right .title{
+        display: none;
+    }
+
+    .footer .footer-wrap{
+        padding: 0 2%;
+        font-size: 12px;
+    }
+    .footer .footer-wrap ul:nth-child(1){
+        flex-wrap: wrap;
+    }
+    .footer .footer-wrap ul:nth-child(1) li{
+        flex-basis: 40%;
+    }
+    .footer .footer-wrap ul:nth-child(1) li:nth-child(odd)::after{
+        display: none;
+    }
+    .footer .icon img{
+        width: 15px;
+        height: 15px;
     }
 }
