--- a/css/index3.css
+++ b/css/index3.css
@@ -9,6 +9,7 @@ html, body{width: 100%; height: 100%;}
 .wrap{
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
 }
 
 .header{
@@ -742,16 +743,25 @@ html, body{width: 100%; height: 100%;}
         display: none;
     }
 
+    .content .menu{
+        padding: 50px 0;
+    }
     .content .menu ul{
         flex-wrap: wrap;
+        row-gap: 20px;
     }
     .content .menu ul li{
         flex-basis: 30%;
         text-align: center;
+        font-size: 10px;
     }
     .content .menu ul li.on::after{
-        width: 30%;
-        bottom: 5%;
+        /* width: 30%;
+        bottom: 5%; */
+        width: 10%;
+        height: 10%;
+        border-radius: 100px;
+        top: -20%;
     }
 
     .content .pic .swiper-wrapper .pic-item ul{
@@ -774,9 +784,11 @@ html, body{width: 100%; height: 100%;}
         padding-bottom: 0px;
         flex-wrap: wrap;
         margin: 50px 0;
+        row-gap: 20px;
     }
     .content .special .title ul li{
         flex-basis: 30%;
+        font-size: 10px;
     }
     .content .special .title ul li::after{
         content: "";
@@ -790,7 +802,10 @@ html, body{width: 100%; height: 100%;}
         transition: 0.3s;
     }
     .content .special .title ul li.on::after{
-        width: 20%;
+        width: 10%;
+        height: 10%;
+        border-radius: 100px;
+        top: -20%;
         transition: 0.3s;
     }
 
@@ -854,8 +869,15 @@ html, body{width: 100%; height: 100%;}
     .content .banner .right{
         flex-basis: 100%;
     }
+    .content .banner .left .left-wrap{
+        width: 100%;
+    }
     .content .banner .right .top .searchbox{
         margin: 0 auto;
+    }
+
+    .content .banner .top .searchbox .search3{
+        width: 100%;
     }
     .content .banner .bottom .txt1 ul{
         width: 50%;
