--- a/css/index3.css
+++ b/css/index3.css
@@ -195,6 +195,7 @@ html, body{width: 100%; height: 100%;}
     width: 100%;
     display: flex;
     overflow: hidden;
+    margin-bottom: 50px;
 }
 .content .pic{
     width: 100%;
@@ -251,6 +252,16 @@ html, body{width: 100%; height: 100%;}
     height: 60%;
     padding-top: 5%;
 }
+
+.content .order{
+    width: 10%;
+    padding: 0.5rem;
+    margin: 0 auto;
+    border-radius: 15px;
+    background-color: #e7b633;
+    text-align: center;
+    cursor: pointer;
+}
 /* 메뉴부분 수정해야함 */
 /* 메뉴부분 수정해야함 */
 /* 메뉴부분 수정해야함 */
@@ -278,9 +289,8 @@ html, body{width: 100%; height: 100%;}
     margin: 0 auto;
 }
 .content .special .title span{
-    /* padding-left: 475px; */
-    padding-left: 41%;
-    margin: 0 auto;
+    display: flex;
+    justify-content: center;
     font-size: 24px;
 }
 .content .special .title ul{
@@ -418,7 +428,149 @@ html, body{width: 100%; height: 100%;}
 /* 컨텐츠 스페셜 끝 */
 /* 컨텐츠 스페셜 끝 */
 
+
 .content .banner{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+}
+.content .banner .left{
+    width: 100%;
+    grid-column: 1/2;
+    background: url(../images/가맹점.png) no-repeat center;
+    background-size: cover;
+}
+.content .banner .left .left-wrap{
+    width: 50%;
+    height: 298px;
+    margin: 0 auto;
+    background-color: rgba(255, 255, 255, 0.76);
+    text-align: center;
+}
+.content .banner .left ul{
+    margin-bottom: 42px;
+    padding-top: 75px;
+}
+.content .banner .left ul li:nth-child(1){
+    font-size: 28px;
+    font-weight: bold;
+    margin-bottom: 25px;
+}
+.content .banner .left .more{
+    width: 40%;
+    background-color: #e7b633;
+    border-radius: 30px;
+    margin: 0 auto;
+    padding: 1% 0;
+    /* line-height: 50px; */
+    font-weight: bold;
+    font-size: 25px;
+    text-align: center;
+}
+
+.content .banner .right{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    display: grid;
+    grid-template-rows: repeat(2, 50%);
+}
+.content .banner .right .title span{
+    font-size: 28px;
+    font-weight: bold;
+    position: relative;
+}
+.content .banner .title span::after{
+    content: "";
+    position: absolute;
+    width: 7px; height: 7px;
+    background-color: #000;
+    border-radius: 5px;
+    /* left: -20%; */
+    left: -15px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.content .banner .right .top{
+    grid-column: 1/2;
+    background-color: #e7b633;
+    padding: 5% 0;
+
+}
+.content .banner .right .bottom{
+    grid-column: 1/2;
+    grid-row: 2/3;
+    background-color: #f3f4ef;
+    padding: 5% 0;
+}
+.content .banner .right .top .top-wrap,
+.content .banner .right .bottom .bottom-wrap{
+    width: 90%;
+    height: 100%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+}
+.content .banner .top .title p{
+    color: #fff;
+    margin-top: 20px;
+}
+.content .banner .top .searchbox{
+    display: grid;
+    grid-template-rows: repeat(3, 30%);
+    text-align: center;
+    grid-row-gap: 10px;
+}
+.content .banner .top .searchbox .search1{
+    display: flex;
+    justify-content: center;
+    gap: 10%;
+}
+.content .banner .top .searchbox .search1-1{
+    width: 100%;
+    height: 100%;
+    background-color: #f3f4ef;
+    border-radius: 10px;
+    border: 1px solid #8d8e8b;
+}
+.content .banner .top .searchbox .search2{
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background-color: #f3f4ef;
+    border-radius: 10px;
+    border: 1px solid #8d8e8b;
+    box-sizing: border-box;
+}
+.content .banner .top .searchbox .search3{
+    width: 35%;
+    height: 80%;
+    margin: 0 auto;
+    background-color: #767773;
+    border-radius: 10px;
+}
+.content .banner .bottom .txt .txt-area{
+    display: grid;
+    grid-template-columns: 70% 20%;
+    gap: 10%;
+}
+.content .banner .bottom .txt .txt-area ul:nth-child(2){
+    text-align: right;
+}
+.content .banner .bottom .txt2{
+    margin-top: 10px;
+}
+.content .banner .bottom .txt2 ul:nth-child(1) li{
+    position: relative;
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+/* 망하면 싹다 풀기 */
+/* 망하면 싹다 풀기 */
+/* 망하면 싹다 풀기 */
+/* .content .banner{
     width: 100%;
     display: flex;
 }
@@ -441,20 +593,17 @@ html, body{width: 100%; height: 100%;}
     padding-top: 75px;
 }
 .content .banner .left ul li:nth-child(1){
-    /* font-size: 28px; */
     font-size: 1.5vw;
     font-weight: bold;
     margin-bottom: 25px;
 }
 .content .banner .left .more{
     width: 40%;
-    /* height: 51px; */
     background-color: #e7b633;
     border-radius: 30px;
     margin: 0 auto;
     line-height: 50px;
     font-weight: bold;
-    /* font-size: 21px; */
     font-size: 1.2vw;
     text-align: center;
 }
@@ -477,7 +626,6 @@ html, body{width: 100%; height: 100%;}
     width: 90%;
     margin: 0 auto;
     display: flex;
-    /* justify-content: space-between; */
 }
 .content .banner .right .top .top-wrap .title,
 .content .banner .right .bottom .bottom-wrap .title{
@@ -522,7 +670,6 @@ html, body{width: 100%; height: 100%;}
     box-sizing: border-box;
 }
 .content .banner .top .searchbox .search2{
-    /* width: 460px; */
     height: 40px;
     text-align: center;
     background-color: #f3f4ef;
@@ -533,9 +680,7 @@ html, body{width: 100%; height: 100%;}
     margin-top: 6px;
 }
 .content .banner .top .searchbox .search3{
-    /* width: 173px; */
     width: 35%;
-    /* height: 33px; */
     margin: 0 auto;
     margin-top: 21px;
     text-align: center;
@@ -544,7 +689,6 @@ html, body{width: 100%; height: 100%;}
     line-height: 33px;
 }
 .content .banner .bottom .txt .txt-area{
-    /* width: 460px; */
     display: flex;
     justify-content: space-between;
     flex-basis: 47%;
@@ -561,7 +705,7 @@ html, body{width: 100%; height: 100%;}
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-}
+} */
 /* .content .banner .bottom .txt ul:nth-child(1) li::after{
     position: absolute;
     content: "";
@@ -629,6 +773,22 @@ html, body{width: 100%; height: 100%;}
     }
 } */
 
+@media screen and (max-width: 1200px) {
+    .header .header-list .side-nav{
+        width: 30%;
+        padding: 5%;
+    }
+    .header .header-list .side-nav ul li:not(:nth-child(5)){
+        padding-bottom: 50px;
+    }
+    .header .header-list .side-nav ul li a{
+        font-size: 14px;
+    }
+
+    .content .order{
+        font-size: 12px;
+    }
+}
 
 @media screen and (min-width: 641px) and (max-width: 1200px) {
     /* .content .menu ul li{
@@ -701,7 +861,10 @@ html, body{width: 100%; height: 100%;}
         display: flex;
     } */
 
-    .content .banner{
+    /* 배너 나중에 풀어 */
+    /* 배너 나중에 풀어 */
+    /* 배너 나중에 풀어 */
+    /* .content .banner{
         flex-wrap: wrap;
     }
     .content .banner .left,
@@ -712,6 +875,29 @@ html, body{width: 100%; height: 100%;}
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+    } */
+    .content .banner{
+        grid-template-columns: none;
+        grid-template-rows: repeat(2);
+        /* grid-row-gap: 50px; */
+    }
+    .content .banner .left{
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+    .content .banner .right{
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+    .content .banner .right .title span{
+        font-size: 20px;
+    }
+    .content .banner .right .title p{
+        font-size: 13px;
+    }
+    .content .banner .right .txt-area,
+    .content .banner .right .searchbox{
+        font-size: 15px;
     }
 
     .footer .footer-wrap{
@@ -774,6 +960,9 @@ html, body{width: 100%; height: 100%;}
         display: none;
     }
 
+    .content .special{
+        padding: 100px 0;
+    }
     .content .special .special-wrap .title{
         text-align: center;
     }
@@ -789,6 +978,10 @@ html, body{width: 100%; height: 100%;}
     .content .special .title ul li{
         flex-basis: 30%;
         font-size: 10px;
+    }
+    .content .special .title ul li:nth-child(4),
+    .content .special .title ul li:nth-child(5){
+        flex-basis: 50%;
     }
     .content .special .title ul li::after{
         content: "";
@@ -843,6 +1036,7 @@ html, body{width: 100%; height: 100%;}
     }
     .content .special .txt_box{
         flex-basis: 80%;
+        margin: 0 auto;
         padding: 3% 0;
         transition: 0.3s;
     }
@@ -852,6 +1046,7 @@ html, body{width: 100%; height: 100%;}
         /* padding-top: 91px; */
         margin-right: 13px;
         align-items: center;
+        font-size: 9px;
     }
     .content .special .txt_box ul li:nth-child(2),
     .content .special .txt_box ul li:nth-child(3),
@@ -863,6 +1058,35 @@ html, body{width: 100%; height: 100%;}
     }
 
     .content .banner{
+        grid-template-columns: none;
+        grid-template-rows: repeat(2);
+        /* grid-row-gap: 50px; */
+    }
+    .content .banner .left{
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+    .content .banner .right{
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+    .content .banner .right .title span{
+        font-size: 16px;
+    }
+    .content .banner .right .title p{
+        font-size: 11px;
+    }
+    .content .banner .right .txt-area,
+    .content .banner .right .searchbox{
+        font-size: 12px;
+    }
+    .content .banner .bottom .txt ul li{
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    /* .content .banner{
         flex-wrap: wrap;
     }
     .content .banner .left,
@@ -872,10 +1096,10 @@ html, body{width: 100%; height: 100%;}
     .content .banner .left .left-wrap{
         width: 100%;
     }
+
     .content .banner .right .top .searchbox{
         margin: 0 auto;
     }
-
     .content .banner .top .searchbox .search3{
         width: 100%;
     }
@@ -891,13 +1115,35 @@ html, body{width: 100%; height: 100%;}
     .content .banner .bottom .txt .txt2 ul{
         width: 50%;
     }
-    /* .content .banner .right .title span{
-        font-size: 18px;
-    } */
     .content .banner .right .title{
         display: none;
+    } */
+
+    /* .content .banner .right{
+        display: grid;
+        grid-template-rows: repeat(2, 2fr);
+    }
+    .content .banner .right .top{
+        grid-row: 1/2;
+    }
+    .content .banner .right .bottom{
+        grid-row: 2/3;
     }
 
+    .content .banner .top .title p{
+        display: none;
+    }
+    .content .banner .top .top-wrap{
+        display: grid;
+        grid-template-columns: repeat(2);
+    }
+    .content .banner .top .title span{
+        font-size: 18px;
+    } */
+
+    .footer{
+        margin-top: 100px;
+    }
     .footer .footer-wrap{
         padding: 0 2%;
         font-size: 12px;
